package com.xinyu.unidata.protocbuf;

option java_package = "com.xinyu.unidata.protocbuf";
option java_outer_classname = "TimeLineProto";

// 分时

message TimeLine{
	//日期格式 yyyyMMdd
	required int32 date = 1;
	//时间格式 HHmmssSSS 
	required int32 time = 2;
	
	//价格
	optional int64 price = 4;
	// 现量 (股)
	optional int64 nowVolume = 5;
	//均价
	optional int64 avgPrice = 6;
	
	//持仓量
	optional int32 ccl = 7;
	
	//涨跌幅 
	optional float netChangeRatio = 8;
	//昨收盘价
	optional int64 preClose = 9;

	// 现额 (元)
	optional int64 nowAmount = 10;
	// 成交总量 (股)
	optional int64 volume = 11;
	// 成交金额 (元)
	optional int64 amount = 12;
	// 换手率
	optional float turnoverRatio = 13;
	//涨跌
	optional int64 netChange = 14;
	// 开盘价
	optional int64 open = 15;
}
